# FleetSense

./: .gitignore  .pre-commit-config.yaml  DataAnalysis.ipynb  DatasetGen.py  Download.py  PerVessel.py  README.md  config.py  pyproject.toml
.github/workflows/: ci.yml
docs/: dataset_pipeline.md
fleetsense/: config.py
fleetsense/api/: main.py  schemas.py
fleetsense/data/: aggregate_per_vessel.py  download.py
fleetsense/features/: data_loader.py  feature_selection.py  generate_features.py
fleetsense/model/: base_model.py
fleetsense/monitoring/: distribution_monitoring.py  drift_splits.py  plotting.py
notebooks/: BaseCase.ipynb  DataAnalysis.ipynb  FeatureAnalysis.ipynb  TemporalDrift.ipynb  distribution_monitoring.ipynb
scripts/: generate_dataset.py
src/: config.py
src/data/: DatasetGen.py  Download.py  PerVessel.py  aggregate_per_vessel.py
src/drift_analysis/: TemporalDrift.ipynb
src/evaluation/: BaseCase.ipynb  DataAnalysis.ipynb
src/features/: generate_features.py
src/model/: BaseCase.ipynb  base_model.py
src/monitoring/: drift_splits.py
src/notebooks/: DataAnalysis.ipynb  FeatureAnalysis.ipynb
