[project]
name = "driftanalysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Marte Løyning Rongve", email = "mro201@uit.no"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.42.1,<2.0.0",
    "pandas>=3.0.3,<4.0.0",
    "numpy>=2.5.0,<3.0.0",
    "scikit-learn>=1.9.0,<2.0.0",
    "scipy>=1.18.0,<2.0.0",
    "matplotlib>=3.11.0,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "pyarrow>=24.0.0,<25.0.0",
    "requests>=2.34.2,<3.0.0",
]
[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.6.1,<5.0.0",
    "notebook>=7.6.0,<8.0.0",
    "ipykernel>=7.3.0,<8.0.0",
    "ruff>=0.15.20,<0.16.0",
    "pre-commit>=4.6.0,<5.0.0",
    "mypy>=2.1.0,<3.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
files = ["src/"]
ignore_missing_imports = true
